# tf-rmm

./: .checkpatch.conf  .clang-tidy  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  requirements.txt  test
app/: CMakeLists.txt  bundle_app_rmm.py  gen_app_bin.py
app/attestation/: CMakeLists.txt
app/attestation/el0_app/: CMakeLists.txt
app/attestation/rmm_stub/: CMakeLists.txt
app/common/: CMakeLists.txt
app/common/el0_app/: CMakeLists.txt  CommonApp.cmake  linker.lds
app/common/framework/: CMakeLists.txt
app/common/include/: app_common.h
app/common/rmm_svc/: CMakeLists.txt
app/device_assignment/: CMakeLists.txt
app/device_assignment/el0_app/: CMakeLists.txt
app/device_assignment/rmm_stub/: CMakeLists.txt
app/random/: CMakeLists.txt
app/random/el0_app/: CMakeLists.txt
app/random/rmm_stub/: CMakeLists.txt
docs/: CMakeLists.txt  conf.py  conf.py.in  global_substitutions.txt  glossary.rst  index.rst  readme.rst  requirements.txt
docs/_static/css/: rmm_custom.css
docs/about/: change-log.rst  dco.rst  index.rst  license.rst  maintainers.rst
docs/design/: cold-and-warm-boot-design.rst  el0-app-tlb-asid.rst  el0-app.rst  fake-host-architecture.rst  file-org-and-config.rst  index.rst  locking.rst  memory-management.rst  pdev_aux_granules.rst  rtt-map-unmap.rst
docs/getting_started/: build-options.rst  building-with-shrinkwrap.rst  getting-started.rst  index.rst
docs/process/: coding-standard.rst  commit-style.rst  contributing.rst  index.rst  security.rst
docs/resources/: index.rst
docs/resources/application-notes/: cbmc.rst  corpora.rst  cppcheck.rst  fuzz.rst  index.rst
docs/security/: index.rst
docs/security/threat_model/: dfd.rst  index.rst  introduction.rst  threat_analysis.rst  threat_assessment.rst
drivers/pl011/: CMakeLists.txt
drivers/pl011/include/: pl011.h
drivers/pl011/src/: pl011.c
lib/: CMakeLists.txt
lib/addr_list/: CMakeLists.txt
lib/addr_list/include/: addr_list.h
lib/addr_list/src/: addr_list.c  addr_list_prv.h
lib/addr_list/tests/: CMakeLists.txt  addr_list_tests.cpp
lib/allocator/: CMakeLists.txt
lib/allocator/include/: alloc_utils.h  memory_alloc.h
lib/allocator/src/: alloc_utils.c  memory_alloc.c
lib/arch/: CMakeLists.txt
lib/arch/include/: arch.h  arch_features.h  arch_helpers.h  esr.h  fpu_helpers.h  mec.h  pauth.h  pmu.h  simd.h  sve_helpers.h  vmid.h
lib/arch/src/: arch_features.c  fpu_helpers.c  mec.c  pauth.c  pmu.c  simd.c  vmid.c
lib/arch/tests/: CMakeLists.txt  simd_test_helpers.c  simd_tests.cpp
lib/asc/: CMakeLists.txt
lib/asc/include/: asc.h
lib/asc/src/: asc_drv.c
lib/attestation/: CMakeLists.txt
lib/attestation/include/: attestation.h  attestation_token.h
lib/attestation/src/: attestation_defs_priv.h  attestation_el3_token_sign.c  attestation_key.c  attestation_priv.h  attestation_rnd.c  attestation_token.c  attestation_utils.c
lib/common/: CMakeLists.txt
lib/common/include/: bitmap.h  dev_assign_layout.h  dev_type.h  platform_api.h  sizes.h  status.h  types.h  utils_def.h
lib/console/: CMakeLists.txt
lib/console/include/: console.h
lib/console/src/: console.c
lib/debug/: CMakeLists.txt
lib/debug/include/: debug.h
lib/debug/src/: backtrace.c
lib/gic/: CMakeLists.txt
lib/gic/include/: gic.h
lib/gic/src/: gic.c
lib/glob_data/: CMakeLists.txt
lib/glob_data/include/: glob_data.h
lib/glob_data/src/: glob_data.c
lib/granule/: CMakeLists.txt
lib/granule/include/: dev_granule.h  granule.h  granule_types.h
lib/granule/src/: dev_granule.c  granule.c
lib/granule/tests/: CMakeLists.txt  granule.cpp
lib/libc/: CMakeLists.txt
lib/libc/include/: stdbool.h  stdio.h  string.h
lib/mbedtls/: CMakeLists.txt
lib/measurement/: CMakeLists.txt
lib/mec/: CMakeLists.txt
lib/pcpu_data/: CMakeLists.txt
lib/qcbor/: CMakeLists.txt
lib/realm/: CMakeLists.txt
lib/rmm_el3_ifc/: CMakeLists.txt
lib/s2tt/: CMakeLists.txt
lib/simd/: CMakeLists.txt
lib/slot_buf/: CMakeLists.txt
lib/smc/: CMakeLists.txt
lib/smmuv3/: CMakeLists.txt
lib/spdm_requester/: CMakeLists.txt
lib/sro_context/: CMakeLists.txt
lib/stack_protector/: CMakeLists.txt
lib/t_cose/: CMakeLists.txt
lib/timers/: CMakeLists.txt
lib/xlat/: CMakeLists.txt
lib/xlat_low_va/: CMakeLists.txt
runtime/: CMakeLists.txt  linker.lds
runtime/core/: exit.c  handler.c  init.c  inject_exp.c  log.c  run.c  sysregs.c  timers.c  vmid.c
runtime/include/: activate.h  dev.h  exit.h  feature.h  inject_exp.h  planes.h  psci.h  psmmu.h  realm.h  realm_attest.h  rec.h  rsi-config.h  rsi-handler.h  rsi-host-call.h  rsi-logger.h  rsi-memory.h  rsi-walk.h  rsi_rdev_call.h  run.h  smc-handler.h  sro_smmu.h  sysreg_traps.h  timers.h
runtime/rmi/: activate.c  feature.c  granule.c  pdev.c  psmmu.c  realm.c  rec.c  rtt.c  rtt_internal.h  rtt_map.c  rtt_unmap.c  run.c  sro.c  sro_smmu.c  system.c  vdev.c  vdev_test.h  version.c
runtime/rsi/: config.c  feature.c  host_call.c  logger.c  memory.c  planes.c  psci.c  rdev.c  realm_attest.c  realm_ipa_helper.c  system.c  vdev.c  version.c
runtime/tests/: CMakeLists.txt  exit_esr_tests.cpp  psmmu_sro_tests.cpp  rec_sro_tests.cpp  rsi_logger_tests.cpp  rtt_data_map_tests.cpp  rtt_data_test_helpers.h  rtt_data_unmap_tests.cpp  rtt_test_helpers.h  sro_donate_tests.cpp  vdev_range_slot_tests.cpp
tools/: CMakeLists.txt  requirements.txt
tools/cbmc/: CMakeLists.txt  CheckCBMC.cmake  SourceCollectHelpers.cmake  SummaryHelpers.cmake  compare_summary.py
tools/checkbannedapi/: CheckBannedApi.cmake  banned-apis.txt  checkbannedapi.py  ignore-banned-api.txt
tools/checkincludes/: CheckIncludes.cmake  checkincludes.py
tools/checkpatch/: CheckPatch.cmake  checkascii.py  checkcommitmsg.py  checkpatch.pl  spelling.txt
tools/checkspdx/: CheckSPDX.cmake  checkspdx.py
tools/clang-tidy/: clang-tidy.cmake
tools/common/: GitUtils.cmake
tools/cppcheck/: CMakeLists.txt  CPPCheck.cmake  misra.json  misra.rules  suppressions.txt
tools/fuzz/: CMakeLists.txt  fuzz.env
tools/shrinkwrap/: fix_pci_json.sh  measurements.json  pci.json
(+568 files in other folders)
